Fix demo button being overlapped bug

--- a/app/assets/stylesheets/splash/splash.scss
+++ b/app/assets/stylesheets/splash/splash.scss
@@ -98,6 +98,7 @@
   max-width: 32.4rem;
   margin: 0 auto;
   width: 100%;
+  z-index: 2;
 }
 
 .splash-main-github-demo-buttons > a {
